Modify PegUtilsLegacy::isPegOutTx to also consider P2WSH output scripts post RSKIP305